@@ -1,5 +1,5 @@
 <?php
-//error_reporting(0);
+error_reporting(0);
 
 function connect(){
 	$conn = mysql_connect( DB_HOST,DB_USER,DB_PASS );
@@ -10,7 +10,7 @@ function connect(){
 		}
 		return $conn;
 	} else {
-		printError();
+		return printError();
 	}
 }
 
@@ -33,7 +33,9 @@ function printError( $return = false, $message = false ){
 }
 
 function sanitize( $buf ){
-	return str_replace( '"',"'", str_replace( "\n",' ',$buf ) );
+	return strip_tags( addslashes(
+		str_replace( "\n",' ',$buf )
+	) );
 }
 
 function toMysql( $date = false ){
@@ -41,6 +43,13 @@ function toMysql( $date = false ){
 		return $date;
 
 	return implode( "-",array_reverse( explode( "/",$date ) ) );
+}
+
+function fromMysql( $date = false ){
+	if( !$date )
+		return $date;
+
+	return implode( "/",array_reverse( explode( "-",$date ) ) );
 }
 
 function startTransaction(){
@@ -93,7 +102,7 @@ function insert( $table = false, $fields = false, $values = false ){
 				$table.
 					' ('. implode( ',',$fields ) .') '.
 				' VALUES '.
-					' ("'. implode( '","',$values ) .'");';
+					' ("'. implode( '","', array_map( sanitize, $values ) ) .'");';
 
 	$query = mysql_query( $sql );
 
@@ -130,7 +139,7 @@ function select( $table = false, $fields = false, $where = false ){
 		$data = array();
 
 		while( $buf = mysql_fetch_assoc( $result ) ){
-			$data[] = $buf;
+			$data[] = array_map( sanitize,$buf );
 		}
 
 		return array(
@@ -154,7 +163,7 @@ function update( $table = false, $values = false, $where = false ){
 	$sql = 'UPDATE '.$table.' SET ';
 
 	foreach( $values as $field => $value ){
-		$sql .= ( $i++ ? ',' : '' ).$field.' = "'. $value .'"';
+		$sql .= ( $i++ ? ',' : '' ).$field.' = "'. sanitize( $value ) .'"';
 	}
 
 	$sql .= ( $where && is_array( $where )
@@ -212,7 +221,7 @@ function toJSON( $return ){
 			$buf .= ( $i++ ? ',' : '' ).'{';
 			$j = 0;
 			foreach( $row as $key => $value ){
-				$buf .= ( $j++ ? ',' : '' ).'"'.$key.'"'.': "'. sanitize( $value ) .'"';
+				$buf .= ( $j++ ? ',' : '' ).'"'.$key.'"'.': "'. $value .'"';
 			}
 			$buf .= '}';
 		}		
